# mai-ml-course

./: README.md  pyproject.toml
Lab_1/: Lab1_3.ipynb
Lab_1/.ipynb_checkpoints/: Lab1_3-checkpoint.ipynb
Lab_2/: SubmitExample.ipynb  final_submition.ipynb  model.ipynb  submission.csv  submit2.ipynb  test.csv
Lab_2/.ipynb_checkpoints/: model-checkpoint.ipynb
Lab_3/: submission.csv  submission.ipynb
practice/: Practice 1 _ Pandas.ipynb
